//
//  USBTypes.swift
//  observer
//
//  Created by Burak Çokyıldırım on 13.05.2020.
//  Copyright © 2020 burak. All rights reserved.
//

import Foundation

enum USBTypes: Int {
    case usbA = 0x055c
    case usbB = 0x0229
    case usbC = 0x0223
}
