
@startuml

skinparam classAttributeIconSize 0

interface "Observer" {
  +update(usbA: usbB: usbC:)
}

interface "Subject" {
  +register(observer:)
  +unregister(observer:)
  +notify()
}

Class "USBManager" {
  -observers: [Observer]
  -isConnect_usbA: Bool
  -isConnect_usbB: Bool
  -isConnect_usbC: Bool
  +register(observer:)
  +unregister(observer:)
  +notify()
  +changeUSBState(usbType:)
}

Class "USBObserver" {
  +init(subject: Subject)
  +update(usbA: usbB: usbC:)
}

enum "USBTypes" {
  usbA
  usbB
  usbC
}

USBManager ..|> Subject 
USBObserver -> Subject : <<uses>>
USBObserver ..|> Observer 
USBManager -> Observer : <<uses>>

USBManager - USBTypes

@enduml

